--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "mssql": "^10.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.1"
   }
